; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/chelsio/chtls/extr_chtls_cm.c_check_sk_callbacks.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/chelsio/chtls/extr_chtls_cm.c_check_sk_callbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chtls_sock = type { %struct.sock* }
%struct.sock = type { i64 }

@CSK_CALLBACKS_CHKD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.chtls_sock*)* @check_sk_callbacks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_sk_callbacks(%struct.chtls_sock* %0) #0 {
  %2 = alloca %struct.chtls_sock*, align 8
  %3 = alloca %struct.sock*, align 8
  store %struct.chtls_sock* %0, %struct.chtls_sock** %2, align 8
  %4 = load %struct.chtls_sock*, %struct.chtls_sock** %2, align 8
  %5 = getelementptr inbounds %struct.chtls_sock, %struct.chtls_sock* %4, i32 0, i32 0
  %6 = load %struct.sock*, %struct.sock** %5, align 8
  store %struct.sock* %6, %struct.sock** %3, align 8
  %7 = load %struct.sock*, %struct.sock** %3, align 8
  %8 = getelementptr inbounds %struct.sock, %struct.sock* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.chtls_sock*, %struct.chtls_sock** %2, align 8
  %13 = load i32, i32* @CSK_CALLBACKS_CHKD, align 4
  %14 = call i32 @csk_flag_nochk(%struct.chtls_sock* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br label %17

17:                                               ; preds = %11, %1
  %18 = phi i1 [ false, %1 ], [ %16, %11 ]
  %19 = zext i1 %18 to i32
  %20 = call i64 @unlikely(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load %struct.chtls_sock*, %struct.chtls_sock** %2, align 8
  %24 = load i32, i32* @CSK_CALLBACKS_CHKD, align 4
  %25 = call i32 @csk_set_flag(%struct.chtls_sock* %23, i32 %24)
  br label %26

26:                                               ; preds = %22, %17
  ret void
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @csk_flag_nochk(%struct.chtls_sock*, i32) #1

declare dso_local i32 @csk_set_flag(%struct.chtls_sock*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
